<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
  <modelVersion>4.0.0</modelVersion>
  <groupId>sgbd</groupId>
  <artifactId>sgbd</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
   <dependencies> 

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.10.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.sourceforge.jeval/jeval -->
		<dependency>
   	 		<groupId>net.sourceforge.jeval</groupId>
			<artifactId>jeval</artifactId>
    		<version>0.9.4</version>
		</dependency>


   		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi</artifactId>
    		<version>5.2.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
    		<groupId>org.apache.poi</groupId>
    		<artifactId>poi-ooxml</artifactId>
    		<version>5.2.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
		<dependency>
    		<groupId>org.apache.xmlbeans</groupId>
    		<artifactId>xmlbeans</artifactId>
    		<version>5.1.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
    		<groupId>org.apache.commons</groupId>
    		<artifactId>commons-collections4</artifactId>
    		<version>4.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-core</artifactId>
    		<version>2.20.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.tinyjee.jgraphx/jgraphx -->
		<dependency>
    		<groupId>org.tinyjee.jgraphx</groupId>
    		<artifactId>jgraphx</artifactId>
    		<version>3.4.1.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/net.datafaker/datafaker -->
		<dependency>
    		<groupId>net.datafaker</groupId>
    		<artifactId>datafaker</artifactId>
    		<version>1.8.0</version>
		</dependency>
				
	</dependencies>  

</project>